(fix): body horizontal scrollbar hidden

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -82,8 +82,13 @@
 html,
 body {
   max-width: 100vw;
-  /* overflow-x: hidden; */
 }
+
+body {
+  overflow-x: hidden;
+}
+
+
 
 a {
   color: inherit;
